--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "chokidar": "^3.5.1",
     "express": "^4.17.1",
     "mysql2": "^2.2.5",
     "nodemon": "^2.0.7"
